# python-gui-pic18-counting-and-weighing-scale

./: README.md  pyproject.toml  setup.py  setup_testing.py
src/: ADCWidget.py  CalibrationWidget.py  CommandButton.py  MainWindow.py  PromptWidget.py  Router.py  SerialConnectionWidget.py  SerialInterface.py  WeighAndCountWidget.py
testing/: widget_serialtesting.py
wac/: command_button.py  router.py  serial_interface.py  styles.css  theme.py  widget_adc.py  widget_calibration.py  widget_main_window.py  widget_prompt.py  widget_serialconnection.py  widget_serialtesting.py  widget_weighandcount.py
